--- a/section3_fundamentos_do_angular_componentes_e_estilizacoes/project-components/src/app/card/card.component.html
+++ b/section3_fundamentos_do_angular_componentes_e_estilizacoes/project-components/src/app/card/card.component.html
@@ -1,5 +1,8 @@
 <div class="card">
-  <div class="card__plan card__item">Plano <b>simples</b></div>
-  <div class="card__price card__item">R$100,00/mes</div>
+  <div class="card__plan card__item">
+    Plano <b>{{ plano.infos?.tipo }}</b>
+  </div>
+  <div class="card__price card__item">R${{ plano.infos?.preco }}/mes</div>
   <app-card-button></app-card-button>
+  <app-card-button-cancel></app-card-button-cancel>
 </div>
