-Using the 'ng-deep' Selector -Using the 'host' Selector

--- a/section3_fundamentos_do_angular_componentes_e_estilizacoes/project-components/src/app/card-roxo/card-roxo.component.html
+++ b/section3_fundamentos_do_angular_componentes_e_estilizacoes/project-components/src/app/card-roxo/card-roxo.component.html
@@ -2,4 +2,5 @@
   <div class="card-roxo__plan card-roxo__item">Plano <b>completo</b></div>
   <div class="card-roxo__price card-roxo__item">R$2500,00/mes</div>
   <app-card-roxo-button></app-card-roxo-button>
+  <app-card-button-cancel></app-card-button-cancel>
 </div>
