--- a/section3_fundamentos_do_angular_componentes_e_estilizacoes/project-components/src/app/card/card.component.scss
+++ b/section3_fundamentos_do_angular_componentes_e_estilizacoes/project-components/src/app/card/card.component.scss
@@ -19,6 +19,13 @@
         font-weight: 600;
         font-size: 40px;
     }
+}
 
 
+// ::ng-deep #cancel-button .card-button-cancel {
+//   background-color: #5236f4 !important;
+// }
+
+:host ::ng-deep  .card-button-cancel {
+  background-color: #777294 !important;
 }
